CI-CD/Kubernetes/front-end-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-front-end-service
  labels:
    app: echo-chat-front-end-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-chat-front-end-service
  template:
    metadata:
      labels:
        app: echo-chat-front-end-service
    spec:
      containers:
      - name: echo-chat-front-end-service
        image: huukhanh0653/echo-chat-front-end-service:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-front-end-service
spec:
  selector:
    app: echo-chat-front-end-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort # Exposes the service internally within the cluster
