CI-CD/Kubernetes/manage-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-manage-server-service
  labels:
    app: echo-chat-manage-server-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-chat-manage-server-service
  template:
    metadata:
      labels:
        app: echo-chat-manage-server-service
    spec:
      containers:
        - name: echo-chat-manage-server-service
          image: huukhanh0653/echo-chat-manage-server:latest
          ports:
            - containerPort: 8084
          resources:
            requests:
              cpu: "500m"        # Yêu cầu tài nguyên CPU tối thiểu
              memory: "512Mi"    # Yêu cầu bộ nhớ tối thiểu
            limits:
              cpu: "1000m"       # Giới hạn tài nguyên CPU tối đa
              memory: "1Gi"      # Giới hạn bộ nhớ tối đa
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-manage-server-service
spec:
  selector:
    app: echo-chat-manage-server-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: LoadBalancer
