CI-CD/Kubernetes/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: huukhanh0653/echo-chat-notification-service:latest
          ports:
            - containerPort: 8085
          resources:
            requests:
              cpu: "500m"        # CPU request giảm nhẹ hơn
              memory: "512Mi"     # Memory request cho stable performance
            limits:
              cpu: "1000m"       # Giới hạn CPU với giá trị thích hợp
              memory: "1Gi"      # Giới hạn bộ nhớ vừa đủ để tránh OOM
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 15    # Thời gian chờ ban đầu (để service khởi động)
            periodSeconds: 10          # Kiểm tra sống định kỳ sau mỗi 10s
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 30    # Delay trước khi thực hiện liveness
            periodSeconds: 10          # Kiểm tra sống định kỳ
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: LoadBalancer  # Exposes the service internally within the cluster
