CI-CD/Kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-chat-user-service
  labels:
    app: echo-chat-user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-chat-user-service
  template:
    metadata:
      labels:
        app: echo-chat-user-service
    spec:
      containers:
        - name: echo-chat-user-service
          image: huukhanh0653/echo-chat-user-service:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: firebase-service-account-volume
              mountPath: /var/secrets/firebase
              readOnly: true
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
      volumes:
        - name: firebase-service-account-volume
          secret:
            secretName: firebase-service-account

---
apiVersion: v1
kind: Service
metadata:
  name: echo-chat-user-service
spec:
  selector:
    app: echo-chat-user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
