CI-CD/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      Upgrade: $http_upgrade
      Connection: $connection_upgrade
spec:
  ingressClassName: nginx
  rules:
    - host: 34.126.79.147.nip.io
      http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: echo-chat-user-service
                port:
                  number: 8081
          - path: /message-service
            pathType: Prefix
            backend:
              service:
                name: echo-chat-message-service
                port:
                  number: 8082
          - path: /storage-service
            pathType: Prefix
            backend:
              service:
                name: storage-service
                port:
                  number: 8083
          - path: /notification-service
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8085
          - path: /manager-service
            pathType: Prefix
            backend:
              service:
                name: echo-chat-manage-server-service
                port:
                  number: 8084
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
